# direction-instability-drug-validity

./: .gitignore  .zenodo.json  CITATION.cff  DEVIATION_LOG.md  PREREGISTRATION.md  PREREGISTRATION_COMBINED_PAPER.md  PREREGISTRATION_DEPMAP.md  PREREGISTRATION_PERTURBSEQ.md  PREREGISTRATION_SAME_TISSUE.md  PREREG_ROBUSTNESS_CHECKS.md  pyproject.toml
experiments/: 01_toxicity_failure.py  02_smooth_therapeutics.py  03_phenotype_projection.py  03b_h3_crispri_ground_truth.py  04_localization.py  05_transport_stability.py  05b_h5_permutation_null.py  05c_h5_full_leave_one_out.py  06_neural_replication.py  07_perturbseq_correction.py  07b_hp3_permutation_null.py  07b_perturbseq_hp2_pathway.py  08_jump_cp_instability.py  09_same_tissue_lincs.py  10_depmap_replication.py  12_perturbseq_cosine_transport.py  13_lincs_metric_benchmark.py  13b_bootstrap_auroc_cis.py  13c_bootstrap_original_auroc.py  13d_bootstrap_cohens_d.py  13e_bootstrap_auprc.py  13f_moa_classification_auroc.py  13f_moa_classification_auroc_v2.py  14_jump_cp_moa_stratification.py  MOA_CLASSIFICATION_SPEC.md  POSITIVE_CONTROL_SPEC.md  PREREGISTRATION_EXTENDED.md  PREREG_RUNG7_PRISM.md  modal_08_jump_cp.py  positive_control_validation.py  r2_lambda_sensitivity.py  r3_hdac_sensitivity_and_drug_pair.py  r9_dose_direction_stability.py
paper/: PAPER_SKELETON.md  bracket_norm_validity_bmcmrm_v6.tex  bracket_norm_validity_bmcmrm_v7.tex  bracket_norm_validity_psb_v3.tex  bracket_norm_validity_psb_v4.tex  bracket_norm_validity_v4.tex  bracket_norm_validity_v5.tex  bracket_norm_validity_v6.tex  combined_paper_v1.tex  (+8 more)
(+40 files in other folders)
