[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bracket-norm-validity"
version = "0.1.0"
description = "Bracket Norm Is Not Mechanism: Validity Conditions for Noncommutative Perturbation Scores"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "tqdm>=4.65",
    "anndata>=0.11.4",
]

[project.optional-dependencies]
singlecell = ["scanpy>=1.10", "anndata>=0.10"]

[tool.setuptools.packages.find]
include = ["geometry*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
